--- a/article-1/style.css
+++ b/article-1/style.css
@@ -20,11 +20,7 @@
     --darkest-green:#162E30;
 
     /* geronimo words */
-    --orange:#df8734;
-    --yellow:#edda6d;
-    --pink:#ee9cbe;
-    --rose: #c1363f;
-    --purple: #9d369d;
+    
 
     --pistachio:#a6cc90;
     --rosy:#d5a1ba;
@@ -39,11 +35,14 @@ html{
     font-family:"InSans";
     background:var(--off-white);
 }
+
+/* nav */
 nav{
-    margin-block:auto;
+    /* padding:2rem; */
     justify-content: center;
     align-content: center;
-    padding-block-start:2.75rem;
+    padding-block:1.75rem;
+    
 
 }
 nav ul{
@@ -58,13 +57,15 @@ nav ul li{
 }
 #active-nav{
     color: var(--off-white);
+    
 }
 #active-nav:hover{
     color: var(--green);
 }
+
 nav a{
     font-family:"InSans";
-    color: var(--green);
+    color: var(--darker-green);
     font-weight:500;
     font-size:1rem;
     
@@ -153,28 +154,55 @@ h1 span{
 .line{
     background:var(--green);
     margin-block-start:5rem;
-    height:4rem;
+    /* height:rem; */
 
 }
 .dark-line{
-    background:var(--darker-green);
-    margin-block-start:0;
-    height:7rem;
+    /* background:var(--darker-green);
+    margin-block-start:0; */
+    height:7.5rem;
+
+  --s: 4rem; /* control the size*/
+  --c1: #47928b;
+  --c2: #c6e3c7;
+  
+  background:
+    radial-gradient(36% 72% at 25% -50%,var(--c2) 98%,#0000)
+     0 0/calc(2*var(--s)) var(--s),
+    radial-gradient(36% 72% at 75% 150%,var(--c2) 98%,#0000)
+     0 0/calc(2*var(--s)) var(--s),
+    radial-gradient(72% 36% at 150% 25%,var(--c2) 98%,#0000)
+     0 0/var(--s) calc(2*var(--s)),
+    radial-gradient(72% 36% at -50% 75%,var(--c2) 98%,#0000)
+     0 0/var(--s) calc(2*var(--s)),
+    repeating-conic-gradient(var(--c2) 0 45deg,var(--c1) 0 25%)
+     0 0/calc(2*var(--s)) calc(2*var(--s));
+
 }
 #top-line{
     margin:0;
 }
 .context{
-    color:var(--off-white);
-    background:var(--darker-green);
-    padding:2rem;
-    margin-block:0;
-    font-weight: 300;
+     color:var(--off-white);
+    font-family:"InSerif";
+    letter-spacing:.1ch;
+    font-size:1.75rem;
+    padding: 3rem 2rem;
+    background:var(--dark-green);
+    line-height:2.2rem;
+    margin-block:3rem;
     text-align:center;
-    font-size:1.5rem;
+    margin-inline-start:0rem;
+    @media (width > 850px){
+        /* margin-inline-start:1rem; */
+    }
+
 }
 .context em{
     font-style:italic;
+    text-decoration:underline;
+    text-decoration-thickness: .05rem;
+    text-underline-offset: .25rem;
 }
 article{
     /* margin-block-start:10rem; */
@@ -188,6 +216,9 @@ article .pg{
     margin-block:3rem 2rem;
     margin-inline:1rem;
     text-wrap:pretty;
+    @media (width > 850px) {
+        margin-inline-end: 7rem;
+    }
     
 }
 .para{
@@ -214,11 +245,12 @@ article .pg{
         font-size: 4.5rem;
         color:var(--green);
         text-align:left;
-        margin-inline-start:2rem;
+        margin-inline-start:4rem;
         /* border-radius:100px;
         width:min-content;
         height:min-content; */
     }
+    
 	.para {
 		display: grid;
         grid-template-columns:1fr 5fr;
@@ -238,17 +270,18 @@ blockquote{
     font-family:"InSerif";
     letter-spacing:.1ch;
     font-size:1.75rem;
-    padding: 2rem;
+    padding: 3rem 2rem;
     background:var(--dark-green);
     line-height:2.2rem;
-    margin-block:3rem;
+    margin-block:5rem;
     text-align:center;
     margin-inline-start:0rem;
     @media (width > 850px){
         margin-inline-start:1rem;
+                margin-inline-end:7rem;
+
     }
 }
-
 
 .slant{
   display: inline-block;
@@ -262,7 +295,7 @@ blockquote{
   font-weight: 300;
   font-size: 1.3em;
     color: var(--dark-green);
-  transform: rotate(1deg);
+  transform: rotate(1.25deg);
 }
 .geronimo{
     display: inline-block;
@@ -314,5 +347,11 @@ footer{
     color:var(--green);
     font-size:1rem;
     padding: 2rem 1rem;
-    letter-spacing:.25ch;
+    /* letter-spacing:.25ch; */
+}
+footer nav a{
+    color:var(--light-green);
+}
+footer nav a:hover{
+    color:var(--dark-green);
 }
