--- a/article-3/style.css
+++ b/article-3/style.css
@@ -33,16 +33,22 @@
     --sand:#b87466;
 
 }
-
+html {
+  
+}
 html{
     font-family:"InSans";
     background:var(--off-white);
 }
+
+
+/* nav */
 nav{
-    margin-block:auto;
+    /* padding:2rem; */
     justify-content: center;
     align-content: center;
-    padding-block-start:2.75rem;
+    padding-block:1.75rem;
+    
 
 }
 nav ul{
@@ -57,6 +63,7 @@ nav ul li{
 }
 #active-nav{
     color: var(--off-white);
+    
 }
 #active-nav:hover{
     color: var(--green);
@@ -64,7 +71,7 @@ nav ul li{
 
 nav a{
     font-family:"InSans";
-    color: var(--green);
+    color: var(--darker-green);
     font-weight:500;
     font-size:1rem;
     
@@ -72,11 +79,17 @@ nav a{
 nav a:hover{
     color: var(--dark-green);
 }
+
+
+
+
+
 header{
     /* display:flex;
     flex-direction: row;
     margin-inline:1rem;
     column-gap: .5rem; */
+    
 }
 .title-sec{
     /* display:flex;
@@ -95,7 +108,7 @@ header{
 
 h1{
     color:var(--dark-green);
-    font-size:4rem;
+    font-size:4.5rem;
     /* font-weight:800; */
     line-height:4rem;
     margin-block-start:5rem;
@@ -110,7 +123,8 @@ h1{
 }
 h1 span{
     color:var(--darkest-green);
-    font-size:4rem;
+    font-size:4.5rem;
+
     @media (width > 850px) {
     font-size:5rem;
     }
@@ -125,10 +139,10 @@ h1 span{
 
 .og-text p{
     color:var(--darker-green);
-    font-size:2rem;
+    font-size:1.5rem;
     font-weight:400;
     letter-spacing:-.05ch;
-    line-height:2.2rem;
+    line-height:1.5rem;
     margin-block-end:.3rem;
     text-align:right;
 }
@@ -144,28 +158,49 @@ h1 span{
 .line{
     background:var(--green);
     margin-block-start:5rem;
-    height:4rem;
+    /* height:rem; */
 
 }
 .dark-line{
-    background:var(--darker-green);
+    /* background:var(--green); */
     margin-block-start:0;
-    height:7rem;
+    height:7.5rem;
+    --s: 120px; /* control the size*/
+    --c1: #161328;
+    --c2: #012b62;
+    --c3: #3a4f85;
+    --c4: #879abb;
+    --c5: #d4e9f6;
+  
+    --_g: radial-gradient(#0000 70%,var(--c1) 71%);
+    background:
+        var(--_g),var(--_g) calc(var(--s)/2) calc(var(--s)/2),
+        conic-gradient(var(--c2) 25%,var(--c3) 0 50%,var(--c4) 0 75%,var(--c5) 0);
+    background-size: var(--s) var(--s);
 }
 #top-line{
     margin:0;
 }
 .context{
-    color:var(--off-white);
-    background:var(--darker-green);
-    padding:2rem;
-    margin-block:0;
-    font-weight: 300;
+     color:var(--off-white);
+    font-family:"InSerif";
+    letter-spacing:.1ch;
+    font-size:1.75rem;
+    padding: 3rem 2rem;
+    background:var(--dark-green);
+    line-height:2.2rem;
+    margin-block:3rem;
     text-align:center;
-    font-size:1.5rem;
+    margin-inline-start:0rem;
+    @media (width > 850px){
+        /* margin-inline-start:1rem; */
+    }
 }
 .context em{
     font-style:italic;
+    text-decoration:underline;
+    text-decoration-thickness: .05rem;
+    text-underline-offset: .25rem;
 }
 article{
     /* margin-block-start:10rem; */
@@ -179,12 +214,16 @@ article .pg{
     margin-block:3rem 2rem;
     margin-inline:1rem;
     text-wrap:pretty;
+    @media (width > 850px) {
+        margin-inline-end: 7rem;
+    }
 }
 .para{
     margin-block-start:7rem;
 }
 .label {
     /* display:none; */
+    position:sticky;
     text-align:right;
     margin-block: 3rem 1rem;
     margin-inline-end:1rem;
@@ -207,11 +246,12 @@ article .pg{
         font-size: 4.5rem;
         color:var(--green);
         text-align:left;
-        margin-inline-start:2rem;
+        margin-inline-start:4rem;
         /* border-radius:100px;
         width:min-content;
         height:min-content; */
     }
+    
 	.para {
 		display: grid;
         grid-template-columns:1fr 5fr;
@@ -237,11 +277,12 @@ blockquote{
     padding: 3rem 2rem;
     background:var(--dark-green);
     line-height:2.2rem;
-    margin-block:3rem;
+    margin-block:5rem;
     text-align:center;
     margin-inline-start:0rem;
     @media (width > 850px){
         margin-inline-start:1rem;
+        margin-inline-end:7rem;
     }
 }
 
@@ -257,7 +298,7 @@ blockquote{
   font-weight: 300;
   font-size: 1.3em;
     color: var(--dark-green);
-  transform: rotate(1deg);
+  transform: rotate(1.25deg);
 }
 .geronimo{
     display: inline-block;
@@ -303,11 +344,19 @@ blockquote{
     animation: shimmer 5s linear infinite;
 }
 
+
+
 footer{
     background:var(--darkest-green);
     text-align:center;
     color:var(--green);
     font-size:1rem;
     padding-block: 2rem;
-    letter-spacing:.25ch;
+    /* letter-spacing:.25ch; */
+}
+footer nav a{
+    color:var(--light-green);
+}
+footer nav a:hover{
+    color:var(--dark-green);
 }
