--- a/home.css
+++ b/home.css
@@ -45,18 +45,18 @@ main{
 
 header{
     font-family:"InSans";
-    
     text-align:center;
     
 }
 
 h1{
     font-family:"InSerif";
-    font-size:6rem;
+    font-size:7rem;
     margin-block:10rem;
     color:var(--mid-gray);
-    line-height:5.5rem;
+    line-height:6rem;
     margin-inline:2rem;
+    
 }
 h1 span{
     color:var(--darker-gray);
@@ -64,15 +64,15 @@ h1 span{
 }
 @media (width > 850px) {
 	h1 {
-		font-size: 5rem;
-		line-height: 5rem;
+		font-size: 7rem;
+		line-height: 6rem;
         margin-inline: 4rem;
    
 	
     }
 	
     h1 span{
-        font-size:5rem;
+        /* font-size:5rem; */
     }
 }
 h2{
@@ -84,37 +84,43 @@ h2{
     font-weight:200;
 }
 h3{
+    font-family:"InSerif";
     text-align:center;
     margin-block:6rem 4rem;;
-    font-size:2rem;
+    font-size:2.1rem;
     margin-inline:1rem;
     color:var(--dark-gray);
+    letter-spacing:.05ch;
     font-weight:500;
+}
+h3 span{
+    font-family:"InSans";
 }
 
 
 nav{
-    margin-block:3rem 10rem;
+    margin-block:3rem;
+    text-align:center;
     /* background: var(--light-gray);
     padding-block:3rem; */
 }
-nav ul{
-    /* background: var(--darker-gray);
-    padding-block:4rem; */
-}
+
 
 
 ul li{
     font-size:3rem;
-    font-family:"InSerif";
+    font-family:"InSans";
     /* margin-block:1rem; */
    
     font-weight:400;
     padding:2rem 1rem;
-    letter-spacing: .1ch;
+    
 }
 ul li:hover{
     text-transform: uppercase;
+    font-family:"InSerif";
+    letter-spacing: .1ch;
+    font-size:3rem;
 }
 
 #art1-nav{
@@ -180,6 +186,13 @@ main p{
         font-size:1.5rem;
     }
 }
+#intro-title{
+    margin-inline: 4rem;
+
+    @media (width > 850px) { 
+        margin-inline: 4.5rem;
+    }
+}
 
 
 
@@ -192,10 +205,10 @@ main p{
 }
 .colophon p{
 
-    font-size:1rem;
+    font-size:1.2rem;
     line-height:1.5rem;
     color:var(--darker-gray);
-    font-weight:400;
+    font-weight:300;
     text-wrap:pretty;
     
 }
@@ -209,7 +222,7 @@ main p{
         text-align: center;
         font-size:1.2rem;
         line-height:1.5rem;
-        margin-inline:20rem;
+        margin-inline:10rem;
         
     }
 }
@@ -281,7 +294,7 @@ main p{
 
 .line{
     background:var(--light-gray);
-    height:4rem;
+    height:3rem;
 
 }
 .dark-line{
