--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@
 html{
     background:var(--off-white);
     font-family:"InSans";
+    
 }
 /* svg {
         position: fixed;
@@ -58,24 +59,39 @@ header{
     
 }
 
+/* h1 formatting + responsiveness */
 h1{
     font-family:"InSerif";
-    font-size:7rem;
-    margin-block:10rem;
+    font-size:4rem;
+    max-width:27rem;
+    min-width:min-content;
+    margin-block:8rem;
     color:var(--mid-gray);
-    line-height:6rem;
-    margin-inline:2rem;
+    line-height:3.5rem;
+    margin-inline:auto;
     
 }
 h1 span{
     color:var(--darker-gray);
     /* font-size:4rem; */
 }
+@media (500px <= width <= 850px){
+    h1{
+        font-size:6rem;
+        width:30rem;
+        line-height:5.5rem;
+        margin-block:9rem;
+    }
+    
+}
 @media (width > 850px) {
 	h1 {
 		font-size: 7rem;
 		line-height: 6rem;
-        margin-inline: 4rem;
+        width:45rem;
+        margin-inline: auto;
+        margin-block:10rem;
+
    
 	
     }
@@ -84,6 +100,8 @@ h1 span{
         /* font-size:5rem; */
     }
 }
+
+
 h2{
     font-size:1.5rem;
     margin-block: .5rem;
@@ -92,6 +110,8 @@ h2{
     /* letter-spacing:.25ch; */
     font-weight:200;
 }
+
+/* h3 formatting + responsiveness */
 h3{
     font-family:"InSerif";
     text-align:center;
@@ -102,10 +122,37 @@ h3{
     letter-spacing:.05ch;
     font-weight:500;
     line-height:2.5rem;
+
+    @media (500px <= width <= 850px){
+        font-size:3rem;
+        line-height:3rem;
+
+    }
+    @media (width > 850px){
+        font-size:3.5rem;
+        line-height:3.5rem;
+        width:60rem;
+        margin-inline:auto;
+
+    }
+
 }
 #h3span{
     font-family:"InSans";
     font-size:2.75rem;
+
+    @media (500px <= width <= 850px){
+        font-size:3rem;
+        line-height:3rem;
+
+
+    }
+    @media (width > 850px){
+        font-size:3.5rem;
+        line-height:3rem;
+
+
+    }
 }
 
 
@@ -119,21 +166,34 @@ nav{
 }
 
 
+/* navigation banners */
 
 ul li{
-    font-size:3rem;
+    font-size:2rem;
     font-family:"InSans";
-    /* margin-block:1rem; */
    
     font-weight:400;
     padding:2rem 1rem;
     
+
+    @media (500px <= width <= 850px){
+        font-size:2.5rem;
+    }
+    @media (width > 850px){
+        font-size:3rem;
+    }
 }
 ul li:hover{
     text-transform: uppercase;
     font-family:"InSerif";
-    letter-spacing: .1ch;
-    font-size:3rem;
+    font-size:2rem;
+
+    @media (500px <= width <= 850px){
+        font-size:2.5rem;
+    }
+    @media (width > 850px){
+        font-size:3rem;
+    }
 }
 
 #art1-nav{
@@ -165,6 +225,7 @@ ul li:hover{
 
 }
 
+/* image + caption formatting */
 figure{
     justify-content: center;
     margin: 2rem 0;  
@@ -182,10 +243,21 @@ img{
 figcaption{
     text-align:center;
     margin-block:1rem 4.5rem;;
-    margin-inline:7rem;
+    width:20rem;
+    margin-inline:auto;
     font-size:.9rem;
     line-height:1.2rem;
     color: var(--dark-gray);
+
+    @media (500px <= width <= 850px){
+        width:25rem;
+        margin-inline:auto;
+    }
+    @media (width > 850px){
+        width:30rem;
+        margin-inline:auto;
+    }
+    
 }
 figcaption a{
     color: var(--dark-blue);
@@ -197,14 +269,30 @@ figcaption a:hover{
     color: var(--blue);
 }
 
+
+
+
+
+/* body text */
 main p{
     margin-inline:1.5rem;
 }
+/* intro */
 .intro{
     margin-block-end: 3rem;
     text-align:left;
     display:grid;
     grid-template-columns:6fr .5fr;
+
+    @media (500px <= width <= 850px){
+        display:grid;
+        grid-template-columns:6fr 1.5fr;
+    }
+    @media (width > 850px){
+        display:grid;
+        grid-template-columns:1fr;
+        text-align: center;
+    }
 }
 .intro p{
 
@@ -213,40 +301,35 @@ main p{
     color:var(--darker-gray);
     font-weight:300;
     margin-block-end:1.5rem;
-    text-wrap:pretty;
+    text-wrap:balance;
+
+    @media (500px <= width <= 850px){
+        
+    }
+    @media (width > 850px){
+        display:inline-block;
+        width:60vw;
+        margin-inline: auto;
+        
+    }
     
 }
-@media (width > 850px) {
-    .intro{
-        display:grid;
-        grid-template-columns:1fr;
-        text-align: center;
-    }
-    .intro-text{
-        display:grid;
-        /* grid-template-columns:1fr 1fr 1fr;    
-        column-gap:.5rem; */
-        margin-inline: 10rem;
-    
-        font-size:1.5rem;
-    }
-}
-#intro-title{
-    margin-inline: 4rem;
-
-    @media (width > 850px) { 
-        margin-inline: 4.5rem;
-    }
-}
 
 
 
+
+
+/* colophon */
 .colophon{
     margin-block:3rem 5rem;
     text-align:right;
-    /* display:grid; */
-    /* grid-template-columns:1fr 6fr; */
 
+    @media (500px <= width <= 850px){
+    }
+    @media (width > 850px) {
+        display:grid;
+        grid-template-columns:1fr;
+    }
 }
 .colophon p{
 
@@ -254,23 +337,19 @@ main p{
     line-height:1.5rem;
     color:var(--dark-gray);
     font-weight:300;
-    text-wrap:pretty;
-    
-}
-@media (width > 850px) {
-    .colophon{
-        display:grid;
-        grid-template-columns:1fr;
-        
+    text-wrap:balance;
+
+    @media (500px <= width <= 850px){
     }
-    .colophon p{
+    @media (width > 850px) {
         text-align: center;
         font-size:1.2rem;
         line-height:1.5rem;
         margin-inline:10rem;
-        
     }
+    
 }
+
 
 .slant{
   display: inline-block;
