--- a/article-2/style.css
+++ b/article-2/style.css
@@ -28,6 +28,20 @@
     --periwinkle:#7884d2;
     --sand:#b87466;
 
+
+    /* line css pattern */
+    --s: 120px; /* control the size*/
+    --c1: #3a7485;
+    --c2: #d4f6f5;
+    /* pattern grabbed from https://css-pattern.com/ */
+    --circ-pattern: radial-gradient(var(--c2) 15%,
+      #0000 17% 20%,var(--c2) 22% 25%,
+      #0000 27% 30%,var(--c2) 32% 35%,
+      #0000 37% 40%,var(--c2) 42% 45%,
+      #0000 47% 50%,var(--c2) 52% 55%, var(--c1) 57%)
+     calc(var(--s)/2) 0/var(--s) var(--s),
+    repeating-conic-gradient(var(--c2) 0 25%,var(--c1) 0 50%)
+     0 0/calc(2*var(--s)) calc(2*var(--s));
     
 }
 
@@ -35,9 +49,11 @@ html{
     font-family:"InSans";
     background:var(--off-white);
 }
-/* nav */
+
+
+
+/* nav formatting + responsiveness */
 nav{
-    /* padding:2rem; */
     justify-content: center;
     align-content: center;
     padding-block:1.75rem;
@@ -66,7 +82,15 @@ nav a{
     font-family:"InSans";
     color: var(--darker-green);
     font-weight:500;
-    font-size:1rem;
+    font-size:.9rem;
+
+    @media (500px <= width <= 850px){
+        font-size:1rem;
+
+    }
+    @media (width > 850px){
+        font-size:1.2rem;
+    }
     
 }
 nav a:hover{
@@ -75,119 +99,133 @@ nav a:hover{
 
 
 
-
-header{
-    /* display:flex;
-    flex-direction: row;
-    margin-inline:1rem;
-    column-gap: .5rem; */
-}
+/* section within header */
 .title-sec{
-    /* display:flex;
-    flex-direction: row; */
-    margin-inline:1rem;
-    column-gap: 1rem;
-}
-@media (width > 850px) {
-    .title-sec{
+    margin-inline:1.2rem;
+
+    @media (500px <= width <= 850px) {
+
+    }
+    @media (width > 850px) {
         display:flex;
         flex-direction: column;
         text-align:center;
     }
-    
 }
 
+
+/* title formatting */
 h1{
     color:var(--dark-green);
-    font-size:4.5rem;
-    /* font-weight:800; */
-    line-height:4rem;
-    margin-block-start:5rem;
+    font-size:3rem;
+    line-height:2.7rem;
+    margin-block:8rem;
     font-family: "InSerif";
+    width:25rem;
+    
+
+    @media (500px <= width <= 850px) {
+        font-size:4.5rem;
+        line-height:4rem;
+        width:30rem;
+    }
+    @media (width > 850px) {
+        font-size: 5rem;
+		line-height: 4.5rem;
+        margin-inline: auto;
+        width:50rem;
+    }
 }
-@media (width > 850px) {
-	h1 {
-		font-size: 5rem;
-		line-height: 5rem;
-        margin-inline: 2rem;
-	}
-}
+
 h1 span{
     color:var(--darkest-green);
-    font-size:4.5rem;
+    font-size:3rem;
+    line-height:2.7rem;
 
+
+    @media (500px <= width <= 850px) {
+        font-size:4.5rem;
+        line-height:4rem;
+        width:30rem;
+        
+    }
     @media (width > 850px) {
-    font-size:5rem;
+        font-size: 5rem;
+		line-height: 4.5rem;
+        margin-inline: auto;
+        width:50rem;
     }
 }
 
 
-
-.og-text{
-    margin-block-start:4rem;
-    /* margin-inline-end:1rem; */
-}
-
+/* author + date in header */
 .og-text p{
     color:var(--darker-green);
-    font-size:1.5rem;
-    font-weight:400;
-    letter-spacing:-.05ch;
-    line-height:1.5rem;
+    font-size:1.25rem;
+    font-weight:450;
+    line-height:1.25rem;
     margin-block-end:.3rem;
     text-align:right;
-}
-@media (width > 850px) {
-    .og-text{
-        margin-block-start:4rem;
-    }
-    .og-text p{
 
-        text-align:center;
+    @media (500px <= width <= 850px){
+        font-size:1.5rem;
+        line-height:1.5rem;
+
     }
+    @media (width > 850px) {
+        text-align:center;
+        font-size:2rem;
+        line-height:2rem;
+
+    }
+
 }
+
+
+/* color line formatting */
 .line{
     background:var(--green);
     margin-block-start:5rem;
-    /* height:rem; */
-
 }
+#top-line{
+    margin:0;
+}
+
+/* pattern grabbed from https://css-pattern.com/ */
 .dark-line{
     background:var(--darker-green);
     margin-block-start:0;
     height:7.5rem;
-
-  --s: 120px; /* control the size*/
-  --c1: #3a7485;
-  --c2: #d4f6f5;
-  
-  background:
-    radial-gradient(var(--c2) 15%,
-      #0000 17% 20%,var(--c2) 22% 25%,
-      #0000 27% 30%,var(--c2) 32% 35%,
-      #0000 37% 40%,var(--c2) 42% 45%,
-      #0000 47% 50%,var(--c2) 52% 55%, var(--c1) 57%)
-     calc(var(--s)/2) 0/var(--s) var(--s),
-    repeating-conic-gradient(var(--c2) 0 25%,var(--c1) 0 50%)
-     0 0/calc(2*var(--s)) calc(2*var(--s));
+    background:var(--circ-pattern);
 }
 
-#top-line{
-    margin:0;
-}
+
+/* first quote - context of article */
 .context{
-     color:var(--off-white);
+    color:var(--off-white);
     font-family:"InSerif";
     letter-spacing:.1ch;
-    font-size:1.75rem;
+    font-size:1.5rem;
     padding: 3rem 2rem;
     background:var(--dark-green);
-    line-height:2.2rem;
+    line-height:1.75rem;
     margin-block:3rem;
     text-align:center;
     margin-inline-start:0rem;
+    text-wrap:balance;
+
+    @media (500px <= width <= 850px){
+        padding-inline: 5rem;
+        font-size:1.75rem;
+        line-height:2rem;
+
+    }
     @media (width > 850px){
-        /* margin-inline-start:1rem; */
+        padding-inline: 10rem;
+        font-size:2rem;
+        line-height:2.25rem;
+
+
     }
 
 }
@@ -197,6 +235,7 @@ h1 span{
     text-decoration-thickness: .05rem;
     text-underline-offset: .25rem;
 }
+
 article{
     /* margin-block-start:10rem; */
     font-size:1.2rem;
