--- a/article-1/style.css
+++ b/article-1/style.css
@@ -356,24 +356,8 @@ mark{
 
 
 
-blockquote{
-    color:var(--off-white);
-    font-family:"InSerif";
-    letter-spacing:.1ch;
-    font-size:1.75rem;
-    padding: 3rem 2rem;
-    background:var(--dark-green);
-    line-height:2.2rem;
-    margin-block:5rem;
-    text-align:center;
-    margin-inline-start:0rem;
-    @media (width > 850px){
-        margin-inline-start:1rem;
-                margin-inline-end:7rem;
 
-    }
-}
-
+/* geronimo words styling */
 .slant{
   display: inline-block;
   font-weight: 300;
@@ -432,6 +416,7 @@ blockquote{
     animation: shimmer 5s linear infinite;
 }
 
+/* footer formatting */
 footer{
     background:var(--darkest-green);
     text-align:center;
