--- a/home.css
+++ b/home.css
@@ -273,6 +273,14 @@ img{
     margin: 0 auto;
     padding:1rem;
     border:25px solid var(--dark-blue);
+
+
+    @media (500px <= width <= 850px){
+        max-width: 30rem;  
+    }
+    @media (width > 850px){
+        max-width: 35rem;  
+    }
 }
 figcaption{
     text-align:center;
@@ -284,11 +292,15 @@ figcaption{
     color: var(--dark-gray);
 
     @media (500px <= width <= 850px){
-        width:25rem;
+        max-width:28rem;
+        font-size:1rem;
+        line-height:1.3rem;
         margin-inline:auto;
     }
     @media (width > 850px){
-        width:30rem;
+        max-width:35rem;
+        font-size:1.1rem;
+        line-height:1.4rem;
         margin-inline:auto;
     }
     
@@ -296,8 +308,7 @@ figcaption{
 figcaption a{
     color: var(--dark-blue);
     font-weight:500;
-    /* font-family:"InSerif"; */
-    /* font-size:1.2rem; */
+
 }
 figcaption a:hover{
     color: var(--blue);
