--- a/article-2/style.css
+++ b/article-2/style.css
@@ -333,7 +333,7 @@ mark{
     right:0;
     justify-self: right;
     margin-block: 1.5rem .75rem;
-    margin-inline-end:0.5rem;
+    margin-inline:auto 0.5rem;
     font-size: 3rem;
     font-weight:100;
     color:var(--green);
@@ -344,14 +344,14 @@ mark{
     @media (500px <= width <= 850px){
         font-size: 4rem;
         text-align:right;
-        margin-inline-start:5rem;
+        margin-inline-start:auto;
 
     }
     @media (width > 850px) {
         font-size: 5rem;
         text-align:right;
         margin-block:2.2rem 1rem;
-        margin-inline-start:5rem;
+        margin-inline-start:auto;
     }
     
 }
