changed article 1 summary and title responsiveness

--- a/article-2/style.css
+++ b/article-2/style.css
@@ -124,49 +124,46 @@ h1{
     margin-block:7rem 4rem;
     margin-inline:0 auto;
     font-family: "InSerif";
-    width:25rem;
+    max-width:25rem;
     
     @media (width < 415px){
         font-size:3rem;
         line-height:2.7rem;
-        max-width:15rem;
+        max-width:20rem;
         margin-inline: 0rem auto;
         margin-block-start:7rem;
     }
     @media (500px <= width <= 850px) {
         font-size:4.5rem;
         line-height:4rem;
-        width:30rem;
+        max-width:40rem;
     }
     @media (width > 850px) {
         font-size: 5rem;
 		line-height: 4.5rem;
         margin-inline: auto;
-        width:50rem;
+        max-width:60rem;
     }
     @media (850px <= width <= 1000px) {
         font-size: 5rem;
 		line-height: 4.5rem;
         margin-inline: auto;
-        width:40rem;
+        max-width:60rem;
     }
 }
 
 h1 span{
     color:var(--darkest-green);
-    font-size:3.3rem;
-    line-height:2.7rem;
+    
 
 
     @media (500px <= width <= 850px) {
-        font-size:4.5rem;
-        line-height:4rem;
+        
         width:30rem;
         
     }
     @media (width > 850px) {
-        font-size: 5rem;
-		line-height: 4.5rem;
+        
         margin-inline: auto;
         width:50rem;
     }
@@ -371,16 +368,17 @@ mark{
 
 
 /* blockquote formatting */
+/* blockquote formatting */
 blockquote{
     color:var(--dark-green);
 
     font-family:"InSerif";
     letter-spacing:.1ch;
-    font-size:1.75rem;
+    font-size:1.5rem;
+    line-height:1.75rem;
     padding: 1.5rem 2rem;
     border-right: 5px solid var(--green);
-    line-height:2.2rem;
-    margin-block:5rem;
+    margin-block:0rem;
     text-align:right;
     margin-inline:0rem 6rem;
 
