--- a/home.css
+++ b/home.css
@@ -107,9 +107,13 @@ h1{
     line-height:3.5rem;
     margin-inline:auto;
 
+    @media (width < 415px){
+        font-size:3.5rem;
+        line-height: 3rem;
+    }
     @media (500px <= width <= 850px){
         font-size:6rem;
-        width:30rem;
+        max-width:30rem;
         line-height:5.5rem;
         margin-block-start: 1rem;
         margin-block-end: 6.75rem;
@@ -118,7 +122,7 @@ h1{
     @media (width > 850px) {
         font-size: 7rem;
         line-height: 6rem;
-        width:60rem;
+        max-width:60rem;
         margin-inline: auto;
         margin-block-start: 1.5rem;
         margin-block-end: 6.5rem;
